--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             <div class="text-center">
                 <div class="mb-3">
                     <a href="https://www.instagram.com/heroicweb.id" target="_blank" class="me-3"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/company/heroic.website/" target="_blank" class="me-3"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/company/heroic-website/" target="_blank" class="me-3"><i class="bi bi-linkedin"></i></a>
                 </div>
             </div>
             <p class="text-center">Web App Development - Design</p>
