--- a/about-us.html
+++ b/about-us.html
@@ -53,7 +53,7 @@
 <body data-bs-theme="dark" data-bs-spy="scroll" data-bs-target="#navbar">
 
     <div id="preloader"></div>
-    <div class="whatsapp-icon" onclick="window.open('https://wa.me/6285266745599', '_blank')">
+    <div class="whatsapp-icon" onclick="window.open('https://wa.me/6285180737944', '_blank')">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon">
     </div>
     <header id="header">
@@ -76,7 +76,6 @@
                         <ul class="navbar-nav nav-underline justify-content-end flex-grow-1">
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="500" data-bs-dismiss="offcanvas"><a href="/" class="nav-link" aria-current="page"><i class="bi bi-house-door"></i> Home</a></li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas"><a href="/about-us" class="nav-link"><i class="bi bi-people"></i> Summary</a></li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="900" data-bs-dismiss="offcanvas"><a href="articles/blogs" class="nav-link"><i class="bi bi-chat-right-text"></i> Blogs</a></li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas"><a href="/contact" class="nav-link"><i class="bi bi-telephone"></i> Contact</a></li>
                             
                         </ul>
@@ -147,7 +146,7 @@
             <p class="text-center muted-text mt-3 mb-4"> We make content or project with high quality and great.</p>
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 teams-container" data-aos="fade-up" data-aos-delay="200">
                 <div class="col">
-                    <a href="/about">
+                    <a href="https://almufid.tech">
                         <div class="team">
                             <img class="team-image" src="/assets/images/team/rodhi.png" alt="Founder">
                             <h6><center>Founder</center></h6>
