--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav nav-underline justify-content-end flex-grow-1">
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="500" data-bs-dismiss="offcanvas"><a href="#hero" class="nav-link" aria-current="page"><i class="bi bi-house-door"></i> Home</a></li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas"><a href="about" class="nav-link active"><i class="bi bi-file-person"></i> Summary</a></li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas"><a href="https://almufid.tech" class="nav-link active"><i class="bi bi-file-person"></i> Summary</a></li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="700" data-bs-dismiss="offcanvas"><a href="#skills" class="nav-link"><i class="bi bi-card-list"></i> Skills</a></li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="800" data-bs-dismiss="offcanvas"><a href="portfolio/project" class="nav-link"><i class="bi bi-tools"></i> Projects</a></li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="900" data-bs-dismiss="offcanvas"><a href="articles/blogs" class="nav-link"><i class="bi bi-journal-text"></i> Articles</a></li>
