--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@
 
     <meta name="title" content="Contact Us - Heroic">
     <meta name="description" content="Order Website Now">
-    <meta name="keywords" content="Jasa Wesbite, Rodhi Faisal Mufid, Dreamer, Contact, Web Developer, Portfolio, Blog, Tech Insights">
+    <meta name="keywords" content="Jasa aplikasi dan website, desain, dan API, Dreamer, Contact, Web Developer, Portfolio, Blog, Tech Insights">
     <meta name="author" content="Rodhi Faisal Mufid">
 
-    <meta property="og:title" content="Jasa website, desain, aplikasi, API, Rodhi Faisal Mufid">
-    <meta property="og:description" content="Explore my portfolio and blog for tech insights.">
+    <meta property="og:title" content="Jasa aplikasi dan website, desain, dan API">
+    <meta property="og:description" content="Consultation Now, Free!.">
     <meta property="og:image" content="assets/images/Heroic_Logo.png">
     <meta property="og:url" content="/">
     <meta property="og:type" content="website">
