--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 <body data-bs-theme="dark" data-bs-spy="scroll" data-bs-target="#navbar">
 
     <div id="preloader"></div>
-    <div class="whatsapp-icon" onclick="window.open('https://wa.me/6285180737944', '_blank')">
+    <div class="whatsapp-icon" onclick="window.open('wa.me/6285180737944', '_blank')">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon">
     </div>
 
