--- a/about-us.html
+++ b/about-us.html
@@ -200,7 +200,7 @@
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="500">
                 <div class="col-lg-8">
                     <div class="contact-form">
-                        <form id="contactForm" action="wa.me/6285180737944" method="GET" target="_blank">
+                        <form id="contactForm" action="https://wa.me/6285180737944" method="GET" target="_blank">
                             <div class="row g-2">
                                 <div class="col-md-12">
                                     <div class="form-group">
