--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                                     <textarea class="form-control" id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
                                 </div>
                                 <div class="col-md-12">
-                                    <button type="submit" class="btn btn-primary btn-block">Send Message <i class="bi bi-send-arrow-up"></i></button>
+                                    <button type="submit" class="btn btn-primary btn-block">Send Message <i class="bi bi-send"></i></button>
                                 </div>
                             </div>
                         </form>
