--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         <nav id="navbar" class="navbar navbar-expand-md">
             <div class="container">
                 <a href="/" class="navbar-brand logo">
-                    <img src="assets/images/logo/logo-almufid.png" alt="Almufid Official Logo" class="logo-image">
+                    <img src="assets/images/logo/Heroic_Logo.png" alt="Almufid Official Logo" class="logo-image">
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarMenu">
                     <div class="offcanvas-header">
@@ -510,7 +510,7 @@
             <p class="text-center copyright-text">
                 <a href="security/disclaimer">Disclaimer</a> | <a href="security/privacy-policy">Privacy Policy</a> | <a href="security/term">Term & Condition</a>
                 <br>
-                © 2024 Almufid Official. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> in Indonesia.
+                © 2024 Heroic Website. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> in Indonesia.
             </p>
         </div>
     </footer> 
