--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
                         </div>
                         <div class="card-body">
                             <p class="card-title">Content Writing</p>
-                            <p class="card-text text-left align-middle">Content writing services focus on creating high-quality SEO articles. These services ensure that your content is optimized for search engines while providing valuable information to your audience. Whether you need blog posts, website content, or articles, we are dedicated to delivering engaging and effective writing that enhances your online presence. </p>
+                            <p class="card-text text-left align-middle">Content writing services focus on creating high-quality SEO articles. These services ensure that your content is optimized for search engines while providing valuable information to your audience. </p>
+                            <P class="card-text text-left align-middle">Whether you need blog posts, website content, or articles, we are dedicated to delivering engaging and effective writing that enhances your online presence. </P>
                         </div>
                     </div>
                 </div>
