--- a/about-us.html
+++ b/about-us.html
@@ -92,7 +92,7 @@
     <section id="about-us">
         <div class="container">
             <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">Who We Are?</span></h6>
-            <h2 class="section-heading text-center">Tentang Kami</h2>
+            <h2 class="section-heading text-center">About Us</h2>
             <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="200">
                 <div class="col-lg-5 about-us-almufid1">
                     <img src="assets/images/logo/Heroic_Logo.png" class="img-fluid pic" alt="About Us Heroic">
@@ -149,17 +149,15 @@
     <section id="teams">
         <div class="container">
             <h6 class="text-center"><span class="btn btn-sm theme-button theme-text">What technology is used?</span></h6>
-            <h2 class="section-heading text-center">Technology Used</h2>
+            <h2 class="section-heading text-center">Our Team</h2>
             <p class="text-center muted-text mt-3 mb-4"> We make content or project with high quality and great.</p>
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 teams-container" data-aos="fade-up" data-aos-delay="200">
                 <div class="col">
-                    <a href="https://almufid.tech">
-                        <div class="team">
-                            <img class="team-image" src="/assets/images/team/rodhi.png" alt="Founder">
-                            <h6><center>Founder</center></h6>
-                            <p class="team-name">Rodhi</p>
-                        </div>
-                    </a>
+                    <div class="team">
+                        <img class="team-image" src="/assets/images/team/rodhi.png" alt="Founder">
+                        <h6><center>UI UX Designer</center></h6>
+                        <p class="team-name">Figma</p>
+                    </div>
                 </div>                
                 <div class="col">
                     <div class="team">
@@ -230,7 +228,8 @@
             <div class="text-center">
                 <div class="mb-3">
                     <a href="https://www.instagram.com/heroicweb.id" target="_blank" class="me-3"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/company/heroic.website/" target="_blank" class="me-3"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/company/heroic-website/" target="_blank" class="me-3"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://x.com/heroic_web" target="_blank" class="me-3"><i class="bi bi-twitter-x"></i></a>
                 </div>
             </div>
             <p class="text-center">Web App Development - Writing - Design</p>
