--- a/contact.html
+++ b/contact.html
@@ -99,6 +99,11 @@
                     <p class="text-muted">cs.heroicweb@gmail.com</p>
                     <p class="text-muted">info@heroic.web.id</p>
                 </div>
+                <div class="col-md-4 mb-4 text-center">
+                    <p><i class="bi bi-whatsapp text-primary"></i> WhatsApp</p>
+                    <p class="text-muted">CS 1: +62 821 4413 7914</p>
+                    <p class="text-muted">CS 2: +62 895 327 653 360</p>
+                </div>
                 <div class="col-md-8">
                     <div class="contact-form">
                         <form id="contactForm" action="mailto:cs.heroicweb@gmail.com" method="post" enctype="text/plain">
@@ -129,9 +134,10 @@
                 <div class="mb-3">
                     <a href="https://www.instagram.com/heroicweb.id" target="_blank" class="me-3"><i class="bi bi-instagram"></i></a>
                     <a href="https://www.linkedin.com/company/heroic-website/" target="_blank" class="me-3"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://x.com/heroic_web" target="_blank" class="me-3"><i class="bi bi-twitter-x"></i></a>
                 </div>
             </div>
-            <p class="text-center">Web App Development - Design</p>
+            <p class="text-center">Web App Development - Writing - Design</p>
             <p class="text-center copyright-text">
                 <a href="security/disclaimer">Disclaimer</a> | <a href="security/privacy-policy">Privacy Policy</a> | <a href="security/term">Term & Condition</a>
                 <br>
