--- a/index.html
+++ b/index.html
@@ -73,11 +73,26 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav nav-underline justify-content-end flex-grow-1">
-                           
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="500" data-bs-dismiss="offcanvas"><a href="/" class="nav-link" aria-current="page"><i class="bi bi-house-door"></i> Home</a></li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas"><a href="/about-us" class="nav-link"><i class="bi bi-people"></i> Summary</a></li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas"><a href="/contact" class="nav-link"><i class="bi bi-telephone"></i> Contact</a></li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="500" data-bs-dismiss="offcanvas">
+                                <a href="/" class="nav-link" aria-current="page"><i class="bi bi-house-door"></i> Home</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
+                                <a href="/about-us" class="nav-link"><i class="bi bi-info-circle"></i> Summary</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
+                                <a href="/services" class="nav-link"><i class="bi bi-gear"></i> Services</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
+                                <a href="/portfolio/project" class="nav-link"><i class="bi bi-folder"></i> Portfolio</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
+                                <a href="/career" class="nav-link"><i class="bi bi-briefcase"></i> Career @ Heroic</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
+                                <a href="/contact" class="nav-link"><i class="bi bi-telephone"></i> Contact</a>
+                            </li>
                         </ul>
+                        
                     </div>                                                     
                 </div>
                 <button class="btn border-0" id="switchTheme" data-aos="fade-down" data-aos-delay="600"><i class="bi bi-brightness-high-fill"></i></button>
