--- a/portfolio/project.html
+++ b/portfolio/project.html
@@ -68,27 +68,44 @@
         <nav id="navbar" class="navbar navbar-expand-md">
             <div class="container">
                 <a href="/" class="navbar-brand logo">
-                    <img src="../assets/images/logo/logo-almufid.png" alt="Almufid Official Logo" class="logo-image">
+                    <img src="../assets/images/logo/Heroic_Logo.png" alt="Almufid Official Logo" class="logo-image">
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarMenu">
                     <div class="offcanvas-header">
                         <a href="/" class="offcanvas-title navbar-brand logo" id="offcanvasNavbarMenu" data-aos="fade-down" data-aos-delay="600">
                             <span></span>
-                            <span class="logo-name">Almufid Official</span>
+                            <span class="logo-name">Heroic Website</span>
                             <span class="version">v2.0 (Evolution)</span>
                             <span></span>
                         </a>
+                        
                         <button type="button" class="navbar-toggler" data-bs-dismiss="offcanvas" aria-label="Close Navigation Menu"><i class="bi bi-x toggle-icon"></i></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav nav-underline justify-content-end flex-grow-1">
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="500" data-bs-dismiss="offcanvas"><a href="/" class="nav-link" aria-current="page"><i class="bi bi-house-door"></i> Home</a></li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas"><a href="/about-us" class="nav-link"><i class="bi bi-people"></i> Summary</a></li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="900" data-bs-dismiss="offcanvas"><a href="/articles/blogs" class="nav-link"><i class="bi bi-chat-right-text"></i> Blogs</a></li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas"><a href="/contact" class="nav-link"><i class="bi bi-telephone"></i> Contact</a></li>
-                            
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="500" data-bs-dismiss="offcanvas">
+                                <a href="/" class="nav-link" aria-current="page"><i class="bi bi-house-door"></i> Home</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
+                                <a href="/about-us" class="nav-link"><i class="bi bi-info-circle"></i> Summary</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
+                                <a href="/services" class="nav-link"><i class="bi bi-tools"></i> Services</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
+                                <a href="/portfolio/project" class="nav-link"><i class="bi bi-folder"></i> Portfolio</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="900" data-bs-dismiss="offcanvas">
+                                <a href="articles/blogs" class="nav-link"><i class="bi bi-journal-text"></i> Articles</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
+                                <a href="/career" class="nav-link"><i class="bi bi-briefcase"></i> Career @ Heroic</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
+                                <a href="/contact" class="nav-link"><i class="bi bi-telephone"></i> Contact</a>
+                            </li>
                         </ul>
-                    </div>                    
+                    </div>                   
                 </div> 
                 <button class="btn border-0" id="switchTheme" data-aos="fade-down" data-aos-delay="600"><i class="bi bi-brightness-high-fill"></i></button>
                 <span id="current-time"></span>
