--- a/security/privacy-policy.html
+++ b/security/privacy-policy.html
@@ -76,16 +76,34 @@
                             <span class="version">v2.0 (Evolution)</span>
                             <span></span>
                         </a>
+                        
                         <button type="button" class="navbar-toggler" data-bs-dismiss="offcanvas" aria-label="Close Navigation Menu"><i class="bi bi-x toggle-icon"></i></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav nav-underline justify-content-end flex-grow-1">
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="500" data-bs-dismiss="offcanvas"><a href="/" class="nav-link" aria-current="page"><i class="bi bi-house-door"></i> Home</a></li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas"><a href="/about-us.html" class="nav-link"><i class="bi bi-people"></i> Summary</a></li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas"><a href="/contact.html" class="nav-link"><i class="bi bi-telephone"></i> Contact</a></li>
-                            
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="500" data-bs-dismiss="offcanvas">
+                                <a href="/" class="nav-link" aria-current="page"><i class="bi bi-house-door"></i> Home</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
+                                <a href="/about-us" class="nav-link"><i class="bi bi-info-circle"></i> Summary</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
+                                <a href="/services" class="nav-link"><i class="bi bi-tools"></i> Services</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
+                                <a href="/portfolio/project" class="nav-link"><i class="bi bi-folder"></i> Portfolio</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="900" data-bs-dismiss="offcanvas">
+                                <a href="articles/blogs" class="nav-link"><i class="bi bi-journal-text"></i> Articles</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
+                                <a href="/career" class="nav-link"><i class="bi bi-briefcase"></i> Career @ Heroic</a>
+                            </li>
+                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
+                                <a href="/contact" class="nav-link"><i class="bi bi-telephone"></i> Contact</a>
+                            </li>
                         </ul>
-                    </div>                    
+                    </div>                   
                 </div>               
 
                 <button class="btn border-0" id="switchTheme" data-aos="fade-down" data-aos-delay="600"><i class="bi bi-brightness-high-fill"></i></button>
