--- a/accounts/ai-tools/qrcode-reader.html
+++ b/accounts/ai-tools/qrcode-reader.html
@@ -135,7 +135,7 @@
             <p class="text-center copyright-text">
                 <a href="../../security/disclaimer.html">Disclaimer</a> | <a href="../../security/privacy-policy.html">Privacy Policy</a> | <a href="../../security/term.html">Term & Condition</a>
                 <br>
-                © 2024 Almufid Official. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> in Indonesia.
+                © 2024 Almufid Official. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> by Heroic Team.
             </p>
         </div>
     </footer>
