Update & Remove Navbar Menu

--- a/career/details.html
+++ b/career/details.html
@@ -70,17 +70,11 @@
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
                                 <a href="/about-us" class="nav-link"><i class="bi bi-info-circle"></i> Summary</a>
                             </li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
-                                <a href="/services" class="nav-link"><i class="bi bi-tools"></i> Services</a>
-                            </li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
-                                <a href="/portfolio/project" class="nav-link"><i class="bi bi-folder"></i> Portfolio</a>
-                            </li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="900" data-bs-dismiss="offcanvas">
                                 <a href="articles/blogs" class="nav-link"><i class="bi bi-journal-text"></i> Articles</a>
                             </li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
-                                <a href="/career" class="nav-link"><i class="bi bi-briefcase"></i> Career @ Heroic</a>
+                                <a href="/career/details" class="nav-link"><i class="bi bi-briefcase"></i> Career @ Heroic</a>
                             </li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
                                 <a href="/contact" class="nav-link"><i class="bi bi-telephone"></i> Contact</a>
@@ -108,9 +102,9 @@
                             <i class="bi bi-graph-up text-success bi-lg card-img-top banner" style="font-size: 3rem;"></i>
                         </div>                                                                                          
                         <div class="card-body">
-                            <a href="../career/affiliate_marketer.html"></a><h6 class="card-title">Affiliate Marketer</h6></a>
+                            <a href="https://forms.gle/sCTh58sx9SXywKPy9"></a><h6 class="card-title">Social Media Officer</h6></a>
                             <p class="card-text description">Kuota: Terbatas</p>
-                            <a href="../career/affiliate_marketer.html" class="text-decoration-none" target="_blank"><span class="read-more">Apply Now <i class="bi bi-arrow-up-right"></i></span></a>
+                            <a href="https://forms.gle/sCTh58sx9SXywKPy9" class="text-decoration-none" target="_blank"><span class="read-more">Apply Now <i class="bi bi-arrow-up-right"></i></span></a>
                         </div>
                     </div>
                 </div>
@@ -120,9 +114,9 @@
                             <i class="bi bi-box text-success bi-lg card-img-top banner" style="font-size: 3rem;"></i>
                         </div>                                                                                          
                         <div class="card-body">
-                            <a href="../career/intern.html"></a><h6 class="card-title">Intern Team</h6></a>
+                            <a href="https://forms.gle/sCTh58sx9SXywKPy9"></a><h6 class="card-title">Intern Team</h6></a>
                             <p class="card-text description">Kuota: 3 orang</p>
-                            <a href="../career/intern.html" class="text-decoration-none" target="_blank"><span class="read-more">Apply Now <i class="bi bi-arrow-up-right"></i></span></a>
+                            <a href="https://forms.gle/sCTh58sx9SXywKPy9" class="text-decoration-none" target="_blank"><span class="read-more">Apply Now <i class="bi bi-arrow-up-right"></i></span></a>
                         </div>
                     </div>
                 </div>
