--- a/contact.html
+++ b/contact.html
@@ -80,17 +80,11 @@
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
                                 <a href="/about-us" class="nav-link"><i class="bi bi-info-circle"></i> Summary</a>
                             </li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
-                                <a href="/services" class="nav-link"><i class="bi bi-tools"></i> Services</a>
-                            </li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
-                                <a href="/portfolio/project" class="nav-link"><i class="bi bi-folder"></i> Portfolio</a>
-                            </li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="900" data-bs-dismiss="offcanvas">
                                 <a href="articles/blogs" class="nav-link"><i class="bi bi-journal-text"></i> Articles</a>
                             </li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
-                                <a href="/career" class="nav-link"><i class="bi bi-briefcase"></i> Career @ Heroic</a>
+                                <a href="/career/details" class="nav-link"><i class="bi bi-briefcase"></i> Career @ Heroic</a>
                             </li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
                                 <a href="/contact" class="nav-link"><i class="bi bi-telephone"></i> Contact</a>
@@ -120,8 +114,6 @@
                 <div class="col-md-4 mb-4 text-center">
                     <p><i class="bi bi-whatsapp text-primary"></i> WhatsApp</p>
                     <p class="text-muted">CS 1: +62 821 4413 7914</p>
-                    <p class="text-muted">CS 2: +62 895 327 653 360</p>
-                </div>
                 <div class="col-md-8">
                     <div class="contact-form">
                         <form id="contactForm" action="mailto:cs.heroicweb@gmail.com" method="post" enctype="text/plain">
