--- a/index.html
+++ b/index.html
@@ -79,17 +79,11 @@
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
                                 <a href="/about-us" class="nav-link"><i class="bi bi-info-circle"></i> Summary</a>
                             </li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="600" data-bs-dismiss="offcanvas">
-                                <a href="/services" class="nav-link"><i class="bi bi-tools"></i> Services</a>
-                            </li>
-                            <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
-                                <a href="/portfolio/project" class="nav-link"><i class="bi bi-folder"></i> Portfolio</a>
-                            </li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="900" data-bs-dismiss="offcanvas">
                                 <a href="articles/blogs" class="nav-link"><i class="bi bi-journal-text"></i> Articles</a>
                             </li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
-                                <a href="/career" class="nav-link"><i class="bi bi-briefcase"></i> Career @ Heroic</a>
+                                <a href="/career/details" class="nav-link"><i class="bi bi-briefcase"></i> Career @ Heroic</a>
                             </li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
                                 <a href="/contact" class="nav-link"><i class="bi bi-telephone"></i> Contact</a>
