--- a/security/sitemap.html
+++ b/security/sitemap.html
@@ -97,7 +97,7 @@
                                 <a href="articles/blogs" class="nav-link"><i class="bi bi-journal-text"></i> Articles</a>
                             </li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
-                                <a href="/career" class="nav-link"><i class="bi bi-briefcase"></i> Career @ Heroic</a>
+                                <a href="/career/details" class="nav-link"><i class="bi bi-briefcase"></i> Career @ Heroic</a>
                             </li>
                             <li class="nav-item" data-aos="fade-down" data-aos-delay="1000" data-bs-dismiss="offcanvas">
                                 <a href="/contact" class="nav-link"><i class="bi bi-telephone"></i> Contact</a>
