Update Footer and Logo

--- a/about.html
+++ b/about.html
@@ -503,7 +503,7 @@
                 <div class="mb-3">
                     <a href="https://www.instagram.com/themufiddev" target="_blank" class="me-3"><i class="bi bi-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/rodhifaisalmufid" target="_blank" class="me-3"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://twitter.com/themufiddev" target="_blank"><i class="bi bi-twitter"></i></a>
+                    <a href="https://twitter.com/heroic_web" target="_blank"><i class="bi bi-twitter"></i></a>
                 </div>
             </div>
             <p class="text-center">Web App Development - Design</p>
