--- a/accounts/login.html
+++ b/accounts/login.html
@@ -128,14 +128,21 @@
 
 <footer id="footer">
   <div class="container">
-      <p class="text-center">Web App Development - Design</p>
+      <div class="text-center">
+          <div class="mb-3">
+              <a href="https://www.instagram.com/heroicweb.id" target="_blank" class="me-3"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/heroic-website/" target="_blank" class="me-3"><i class="bi bi-linkedin"></i></a>
+              <a href="https://x.com/heroic_web" target="_blank" class="me-3"><i class="bi bi-twitter-x"></i></a>
+          </div>
+      </div>
+      <p class="text-center">Web App Development - Writing - Design</p>
       <p class="text-center copyright-text">
-          <a href="/security/disclaimer">Disclaimer</a> | <a href="/security/privacy-policy">Privacy Policy</a> | <a href="/security/term">Term & Condition</a>
+          <a href="security/disclaimer">Disclaimer</a> | <a href="security/privacy-policy">Privacy Policy</a> | <a href="security/term">Term & Condition</a>
           <br>
-          © 2024 Heroic Website. All rights reserved. 
+          © 2024 PT. Heroic Inovasi Nusantara. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> by Heroic Team.
       </p>
   </div>
-</footer>  
+</footer>   
 
 <script>
   $(document).ready(function() {
