--- a/career/details.html
+++ b/career/details.html
@@ -59,7 +59,7 @@
         <nav id="navbar" class="navbar navbar-expand-md">
             <div class="container">
                 <a href="/" class="navbar-brand logo">
-                    <img src="../assets/images/logo/logo-almufid.png" alt="Almufid Official Logo" class="logo-image">
+                    <img src="../assets/images/logo/Heroic_Logo.png" alt="Almufid Official Logo" class="logo-image">
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarMenu">
                     <div class="offcanvas-body">
@@ -124,24 +124,23 @@
         </div>
     </section>
 
-     <!-- Footer -->
-     <footer id="footer">
+    <footer id="footer">
         <div class="container">
             <div class="text-center">
                 <div class="mb-3">
-                    <a href="https://www.instagram.com/almufid.tech" target="_blank" class="me-3"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/rodhifaisalmufid" target="_blank" class="me-3"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://twitter.com/almufid_tech" target="_blank"><i class="bi bi-twitter"></i></a>
+                    <a href="https://www.instagram.com/heroicweb.id" target="_blank" class="me-3"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/heroic-website/" target="_blank" class="me-3"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://x.com/heroic_web" target="_blank" class="me-3"><i class="bi bi-twitter-x"></i></a>
                 </div>
             </div>
-            <p class="text-center">Web App Development - Design</p>
+            <p class="text-center">Web App Development - Writing - Design</p>
             <p class="text-center copyright-text">
-                <a href="../security/disclaimer.html">Disclaimer</a> | <a href="../security/privacy-policy.html">Privacy Policy</a> | <a href="../security/term.html">Term & Condition</a>
+                <a href="security/disclaimer">Disclaimer</a> | <a href="security/privacy-policy">Privacy Policy</a> | <a href="security/term">Term & Condition</a>
                 <br>
-                © 2024 Almufid Official. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> in Indonesia.
+                © 2024 PT. Heroic Inovasi Nusantara. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> by Heroic Team.
             </p>
         </div>
-    </footer>
+    </footer>  
 
     <button class="btn" id="backToTopButton" onclick="scrollToTop()" style="display: none;">
         <span aria-label="Back to top">
