--- a/contact.html
+++ b/contact.html
@@ -151,10 +151,10 @@
             <p class="text-center copyright-text">
                 <a href="security/disclaimer">Disclaimer</a> | <a href="security/privacy-policy">Privacy Policy</a> | <a href="security/term">Term & Condition</a>
                 <br>
-                © 2024 PT. Heroic Innovasi Nusantara. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> by Heroic Team.
+                © 2024 PT. Heroic Inovasi Nusantara. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> by Heroic Team.
             </p>
         </div>
-    </footer> 
+    </footer>  
 
     <button class="btn" id="backToTopButton" onclick="scrollToTop()" style="display: none;">
         <span aria-label="Back to top">
