--- a/portfolio/project.html
+++ b/portfolio/project.html
@@ -799,19 +799,19 @@
         <div class="container">
             <div class="text-center">
                 <div class="mb-3">
-                    <a href="https://www.instagram.com/almufid.tech" target="_blank" class="me-3"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/company/almufid/" target="_blank" class="me-3"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://twitter.com/themufiddev" target="_blank"><i class="bi bi-twitter"></i></a>
+                    <a href="https://www.instagram.com/heroicweb.id" target="_blank" class="me-3"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/heroic-website/" target="_blank" class="me-3"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://x.com/heroic_web" target="_blank" class="me-3"><i class="bi bi-twitter-x"></i></a>
                 </div>
             </div>
-            <p class="text-center">Web App Development - Design</p>
+            <p class="text-center">Web App Development - Writing - Design</p>
             <p class="text-center copyright-text">
                 <a href="security/disclaimer">Disclaimer</a> | <a href="security/privacy-policy">Privacy Policy</a> | <a href="security/term">Term & Condition</a>
                 <br>
-                © 2024 Almufid Official. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> by Heroic Team.
+                © 2024 PT. Heroic Inovasi Nusantara. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> by Heroic Team.
             </p>
         </div>
-    </footer> 
+    </footer>  
 
     <button class="btn" id="backToTopButton" onclick="scrollToTop()" style="display: none;">
         <span aria-label="Back to top">
