--- a/security/disclaimer.html
+++ b/security/disclaimer.html
@@ -112,7 +112,7 @@
           <div class="row">
               <div class="col-lg-8 offset-lg-2">
                 <h1>Disclaimer for Heroic Website</h1>
-                <p>If you require any more information or have any questions about our site's disclaimer, please feel free to contact us by email at heroicweb.id@gmail.com</p>
+                <p>If you require any more information or have any questions about our site's disclaimer, please feel free to contact us by email at cs.heroicweb@gmail.com</p>
                 
                 <h2>Disclaimers for Heroic Website</h2>    
                 <p>All the information on this website - https://heroic.web.id/ - is published in good faith and for general information purpose only. Heroic Website does not make any warranties about the completeness, reliability and accuracy of this information. Any action you take upon the information you find on this website (Heroic Website), is strictly at your own risk. Heroic Website will not be liable for any losses and/or damages in connection with the use of our website. Our Disclaimer was generated with the help of the <a href="https://www.privacypolicyonline.com/disclaimer-generator/">Disclaimer Generator</a>.</p>
