--- a/security/privacy-policy.html
+++ b/security/privacy-policy.html
@@ -165,7 +165,7 @@
         </div>
         <p class="text-center">Web App Development - Writing - Design</p>
         <p class="text-center copyright-text">
-            <a href="security/disclaimer">Disclaimer</a> | <a href="security/privacy-policy">Privacy Policy</a> | <a href="security/term">Term & Condition</a>
+            <a href="../security/disclaimer">Disclaimer</a> | <a href="../security/privacy-policy">Privacy Policy</a> | <a href="../security/term">Term & Condition</a>
             <br>
             © 2024 PT. Heroic Inovasi Nusantara. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> by Heroic Team.
         </p>
