--- a/author.html
+++ b/author.html
@@ -60,13 +60,13 @@
         <nav id="navbar" class="navbar navbar-expand-md">
             <div class="container">
                 <a href="/" class="navbar-brand logo">
-                    <img src="assets/images/logo/Heroic_Logo.png" alt="Almufid Official Logo" class="logo-image">
+                    <img src="assets/images/logo/Heroic_Logo.png" alt="Heroic Logo" class="logo-image">
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarMenu">
                     <div class="offcanvas-header">
                         <a href="/" class="offcanvas-title navbar-brand logo" id="offcanvasNavbarMenu" data-aos="fade-down" data-aos-delay="600">
                             <span></span>
-                            <span class="logo-name">Almufid Official</span>
+                            <span class="logo-name">Heroic Web</span>
                             <span class="version">v2.0 (Evolution)</span>
                             <span></span>
                         </a>
@@ -109,8 +109,8 @@
                     <h6><span class="bi-arrow-down-circle" class="btn btn-sm theme-button theme-text"> Let's Connect! <span class="bi-arrow-down-circle"></span></span></h6>
                     <div class="social-icons pb-2 pt-2 mb-2">
                         <a href="https://github.com/themufid/" target="_blank" class="github" data-aos="fade-up" data-aos-delay="620"><i class="bi bi-github"></i></a>
-                        <a href="https://twitter.com/themufiddev/" target="_blank" class="twitter-x" data-aos="fade-up" data-aos-delay="64 0"><i class="bi bi-twitter-x"></i></a>
-                        <a href="https://www.instagram.com/themufiddev/" target="_blank" class="instagram" data-aos="fade-up" data-aos-delay="660"><i class="bi bi-instagram"></i></a>
+                        <a href="https://twitter.com/almufid.official/" target="_blank" class="twitter-x" data-aos="fade-up" data-aos-delay="64 0"><i class="bi bi-twitter-x"></i></a>
+                        <a href="https://www.instagram.com/almufid.official/" target="_blank" class="instagram" data-aos="fade-up" data-aos-delay="660"><i class="bi bi-instagram"></i></a>
                         <a href="https://www.tiktok.com/@almufid.official/" target="_blank" class="tiktok" data-aos="fade-up" data-aos-delay="680"><i class="bi bi-tiktok"></i></a>
                         <a href="https://www.linkedin.com/in/rodhifaisalmufid/" target="_blank" class="linkedin" data-aos="fade-up" data-aos-delay="690"><i class="bi bi-linkedin"></i></a>
                     </div>
@@ -510,7 +510,7 @@
             <p class="text-center copyright-text">
                 <a href="security/disclaimer">Disclaimer</a> | <a href="security/privacy-policy">Privacy Policy</a> | <a href="security/term">Term & Condition</a>
                 <br>
-                © 2024 Heroic Website. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> by Heroic Team.
+                © 2024 PT. Heroic Inovasi Nusantara. All rights reserved. Built with <span class="heart-icon"><i class="bi bi-heart"></i></span> and <span class="text-gradient">Sincerity</span> by Heroic Team.
             </p>
         </div>
     </footer> 
