--- a/career/details.html
+++ b/career/details.html
@@ -59,7 +59,7 @@
         <nav id="navbar" class="navbar navbar-expand-md">
             <div class="container">
                 <a href="/" class="navbar-brand logo">
-                    <img src="../assets/images/logo/Heroic_Logo.png" alt="Almufid Official Logo" class="logo-image">
+                    <img src="../assets/images/logo/Heroic_Logo.png" alt="Heroic Logo" class="logo-image">
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarMenu">
                     <div class="offcanvas-body">
