--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Contact Us - Heroic Website</title>
+    <title>Contact Us - Heroic Web</title>
 
     <meta name="title" content="Contact Us - Heroic">
     <meta name="description" content="Order Website Now">
@@ -65,7 +65,7 @@
                     <div class="offcanvas-header">
                         <a href="/" class="offcanvas-title navbar-brand logo" id="offcanvasNavbarMenu" data-aos="fade-down" data-aos-delay="600">
                             <span></span>
-                            <span class="logo-name">Heroic Website</span>
+                            <span class="logo-name">Heroic Web</span>
                             <span class="version">v2.0 (Evolution)</span>
                             <span></span>
                         </a>
