--- a/portfolio/project.html
+++ b/portfolio/project.html
@@ -68,13 +68,13 @@
         <nav id="navbar" class="navbar navbar-expand-md">
             <div class="container">
                 <a href="/" class="navbar-brand logo">
-                    <img src="../assets/images/logo/Heroic_Logo.png" alt="Almufid Official Logo" class="logo-image">
+                    <img src="../assets/images/logo/Heroic_Logo.png" alt="Heroic Logo" class="logo-image">
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarMenu">
                     <div class="offcanvas-header">
                         <a href="/" class="offcanvas-title navbar-brand logo" id="offcanvasNavbarMenu" data-aos="fade-down" data-aos-delay="600">
                             <span></span>
-                            <span class="logo-name">Heroic Website</span>
+                            <span class="logo-name">Heroic Web</span>
                             <span class="version">v2.0 (Evolution)</span>
                             <span></span>
                         </a>
