--- a/accounts/ai-tools/qrcode-reader.html
+++ b/accounts/ai-tools/qrcode-reader.html
@@ -59,7 +59,7 @@
         <nav id="navbar" class="navbar navbar-expand-md">
             <div class="container">
                 <a href="/" class="navbar-brand logo">
-                    <img src="../../assets/images/logo/logo-almufid.png" alt="Almufid Official Logo" class="logo-image">
+                    <img src="../../assets/images/logo/logo-almufid.png" alt="Heroic Logo" class="logo-image">
                 </a>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarMenu">
                     <div class="offcanvas-header">
