--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <div class="card check-catalog-card">                       
                         <div class="card-body">
                             <p class="card-text description">👇 Check Catalog Here! 👇</p>
-                            <center><a href="https://heroic.web.id/product/" class="text-decoration-none" target="_blank"><span class="read-more">Order Now <i class="bi bi-arrow-up-right"></i></span></a></center>
+                            <center><a href="https://wa.me/6282144137914" class="text-decoration-none" target="_blank"><span class="read-more">Order Now <i class="bi bi-arrow-up-right"></i></span></a></center>
                         </div>
                     </div>
                 </div>
